9 October 2024: Wouter
	- Merge #871: DNS over QUIC. This adds `quic-port: 853` and
	  `quic-size: 8m` that enable dnsoverquic, and the counters
	  `num.query.quic` and `mem.quic` in the statistics output.
	  The feature needs to be enabled by compiling with libngtcp2,
	  with `--with-libngtcp2=path` and libngtcp2 needs openssl+quic,
	  pass that with `--with-ssl=path` to compile unbound as well.
	- Fix to limit NSEC TTL for messages from cachedb. Fix to limit the
	  prefetch ttl for messages after a CNAME with short TTL.
	- Fix for dnstap compile of doqclient with doq disabled.

8 October 2024: Wouter
	- Fix #1149: unbound-control-setup hangs sometimes depending on
	  the openssl version.
	- Fix #1128: Cannot override tcp-upstream and tls-upstream with
	  forward-tcp-upstream and forward-tls-upstream.

3 October 2024: Yorgos
	- Fix CVE-2024-8508, unbounded name compression could lead to denial
	  of service.
	- This fix was part of 1.21.1, a security point release on 1.21.0.
	  The code repository continues with this fix and the version number
	  1.22.0.

30 September 2024: Wouter
	- Fix negative cache NSEC3 parameter compares for zero length NSEC3
	  salt.
	- Fix unbound dnstap socket test program analyzer warnings about
	  unused variable assignments and variable initialization.

25 September 2024: Wouter
	- Fix #1144: [FR] log timestamps in ISO8601 format with timezone.
	  This adds the option `log-time-iso: yes` that logs in ISO8601
	  format.

24 September 2024: Yorgos
	- Attempt to further fix doh_downstream_buffer_size.tdir flakiness.
	- More clear text for prefetch and minimal-responses in the
	  unbound.conf man page.
	- Merge #1143: Fix cache update when serve expired is used. Expired
	  records are favored over resolution and validation failures when
	  serve-expired is used.

23 September 2024: Wouter
	- Fix dns64 with prefetch that the prefetch is stored in cache.

23 September 2024: Yorgos